--- a/BMW-promo/index.html
+++ b/BMW-promo/index.html
@@ -12,7 +12,8 @@
     rel="stylesheet">
   <link rel="stylesheet" href="styles/style.min.css">
 
-
+  <script src="js/accordion.js" defer></script>
+  <script src="js/smoothScroll.js" defer></script>
 </head>
 <body>
   <!-- header (start) -->
